fix: image wrap

--- a/style/style.css
+++ b/style/style.css
@@ -489,7 +489,6 @@
 .custom-bgs>div:nth-last-child(25) {
     background-image: url(https://img.gerardgascon.com/itchio/kastell.png);
     box-shadow: inset 0 0 0 1000px #85ee7880;
-    background-size: 256px;
     background-color: #85ee78;
 }
 .custom-bgs>div:nth-last-child(24)::before {
